Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.2.0-rc1
-
Ubuntu 12.04 32bit, QC 4.2 based on Qt5.6
-
a4e213b775d41f5184d1543fae6a3a794595e6b5
Description
Steps to reproduce:
- have a developer build of Qt5
- start QC with clean settings (and without having a Qt in path)
- open qtbase.pro of the developer build Qt5
- QC will bring you to the Projects view, providing a (temporary) Qt for this project
- do not click on 'Configure Project' - just switch to Edit mode
- close QC
Current result:
- QC crashes
Note: I tried with other projects but failed to reproduce.. The only way was to use qtbase of an already done developer build..
Attachments
For Gerrit Dashboard: QTCREATORBUG-17256 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
176599,2 | ProjectExplorer: Avoid accessing nullptr for unconfigured projects | 4.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |