ProjectExplorer: Avoid accessing nullptr for unconfigured projects

Task-number: QTCREATORBUG-17256
Change-Id: I586c7267cbb4f9f16134c1be08aa4a738e990e80
Reviewed-by: hjk <hjk@qt.io>